--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
     <artifactId>okra-api</artifactId>
     <version>1.0.0</version>
 
+    <properties>
+        <source.enconding>UTF-8</source.enconding>
+        <java.version>1.8</java.version>
+    </properties>
+
     <dependencies>
         <!-- Logging -->
         <dependency>
@@ -54,5 +59,20 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${source.enconding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
