--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
             <groupId>org.mongodb</groupId>
             <artifactId>bson</artifactId>
             <version>3.4.2</version>
+            <optional>true</optional>
+            <scope>compile</scope>
         </dependency>
 
         <!-- Logging -->
