--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!--
-  ~ Copyright (c) 2018 Okra Scheduler
+  ~ Copyright (c) 2019 Okra Scheduler
   ~
   ~ Permission is hereby granted, free of charge, to any person obtaining a copy
   ~ of this software and associated documentation files (the "Software"), to deal
@@ -20,7 +20,6 @@
   ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
   ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
   ~ SOFTWARE.
-  ~
   -->
 
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -30,7 +29,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.OkraScheduler</groupId>
     <artifactId>OkraApi</artifactId>
-    <version>1.5.1</version>
+    <version>1.6.0</version>
 
     <properties>
         <source.enconding>UTF-8</source.enconding>
@@ -42,7 +41,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>bson</artifactId>
-            <version>3.4.2</version>
+            <version>3.10.1</version>
             <optional>true</optional>
             <scope>compile</scope>
         </dependency>
@@ -59,8 +58,9 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.16</version>
-            <scope>compile</scope>
+            <version>1.18.6</version>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <!-- Logging -->
